Personalización del portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h1.heading:after {
   width: 100px;
 }
 h1.heading.purple:after {
-  background-color: #7447ae;
+  background-color: #00ff37;
 }
 h1.heading.pink:after {
   background-color: #ff2a75;
@@ -178,7 +178,7 @@ h1.heading.pink:after {
   margin-bottom: 2em;
 }
 .client-box p.tag {
-  color: #7447ae;
+  color: #47ae5f;
   font-family: 'Montserrat', sans-serif;
   margin-bottom: 1em;
 }
@@ -280,7 +280,7 @@ h1.heading.pink:after {
 
 /* Contact Banner */
 .contact-banner {
-  background: url(../assets/bg-pat.png) #664fee repeat;
+  background: url(../assets/bg-pat.png) #00ff37 repeat;
   color: #fff;
   padding: 6em;
 }
